--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,38 +1,83 @@
 $mainColor: #2a5ea2;
 
 .products-wrapper {
-    width: 68%;
-    padding: 10px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 15px;
-    .product-item {
-        img {
-            width: 100%;
-            height: 200px;
-            padding: 3px;
-            border: 1px solid #c0c0c0;
-            transition: all .3s;
-            &:hover {
-                transform: scale(1.03);
-            }
-        }
-        .product-desc {
-            display: flex;
-            justify-content: space-between;
-            padding: 5px;
-            span {
-                display: inline-block;
-                color: red;
-            }
-        }
-        button {
-            border: none;
-            background: $mainColor;
-            color: white;
-            width: 100%;
-            padding: 7px;
-            cursor: pointer;
-        }
+  width: 68%;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 15px;
+  .product-item {
+    img {
+      width: 100%;
+      height: 200px;
+      padding: 3px;
+      border: 1px solid #c0c0c0;
+      transition: all 0.3s;
+      cursor: pointer;
+      background: #c0c0c0;
+      border-radius: 6px;
+      &:hover {
+        transform: scale(1.03);
+      }
     }
+    .product-desc {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px;
+      p {
+        font-weight: bold;
+      }
+      span {
+        display: inline-block;
+        color: red;
+      }
+    }
+    button {
+      &:last-child {
+        border: none;
+        background: $mainColor;
+        color: white;
+        width: 100%;
+        padding: 7px;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: all 0.3s;
+        &:hover {
+          background: #03295a;
+        }
+        &:active {
+          transform: scale(0.9);
+        }
+      }
+    }
+  }
+}
+
+.product-info {
+  position: relative;
+  text-align: center;
+  img {
+    width: 400px;
+    max-width: 100%;
+    margin: auto;
+    border: 1px solid #c0c0c0;
+  }
+  .close-icon {
+    display: block;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    transition: all 0.3s;
+    cursor: pointer;
+    font-size: 20px;
+    &:hover {
+      font-size: 30px;
+      color: red;
+    }
+  }
+  p {
+    color: $mainColor;
+    font-size: 20px;
+    margin: 10px 0;
+  }
 }
