--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -2,11 +2,14 @@ $mainColor: #2a5ea2;
 
 .products-wrapper {
   width: 68%;
-  padding: 10px;
+  height: fit-content;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+
   .product-item {
+    height: fit-content;
+    
     img {
       width: 100%;
       height: 200px;
@@ -20,18 +23,23 @@ $mainColor: #2a5ea2;
         transform: scale(1.03);
       }
     }
+
     .product-desc {
       display: flex;
       justify-content: space-between;
       padding: 5px;
+
       p {
         font-weight: bold;
       }
+
       span {
         display: inline-block;
         color: red;
       }
+
     }
+
     button {
       &:last-child {
         border: none;
@@ -50,7 +58,21 @@ $mainColor: #2a5ea2;
         }
       }
     }
+
   }
+}
+
+@media (max-width: 767px) {
+    .products-wrapper {
+      width: 100%;
+      grid-template-columns: 1fr;
+    }
+}
+@media (min-width: 768px ) and (max-width: 991px) {
+    .products-wrapper {
+      width: 100%;
+      grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .product-info {
@@ -67,11 +89,11 @@ $mainColor: #2a5ea2;
     position: absolute;
     right: 10px;
     top: 10px;
-    transition: all 0.3s;
+    transition: all 0.1s;  
     cursor: pointer;
     font-size: 20px;
     &:hover {
-      font-size: 30px;
+      transform: scale(2);
       color: red;
     }
   }
