--- a/client/src/css/Footer/Footer.css
+++ b/client/src/css/Footer/Footer.css
@@ -1,7 +1,7 @@
 footer {
   grid-area: footer;
   background-color: #2a5ea5;
-  color: white;
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
