--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -1,9 +1,9 @@
 header {
   grid-area: header;
   background-color: #2a5ea5;
-  color: white;
+  color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
   font-size: 20px;
+  text-transform: uppercase;
 }
