--- a/client/src/components/Filter/Filter.scss
+++ b/client/src/components/Filter/Filter.scss
@@ -1,15 +1,17 @@
-
-$mainColor: #2a5ea2;
+// $mainColor: #333;
+$textColor: #fff;
+$mainColor: #2a5ea5;
 
 .filter-wrapper {
-    width: 30%;
+
+    margin-bottom: 30px;
     height: fit-content;
     border: 1px solid #c0c0c0;
     padding-bottom: 10px;
     
     .filter-title {
         background-color: $mainColor;
-        color: white;
+        color: $textColor;
         padding: 10px;
         font-weight: bold;
         text-transform: uppercase;
@@ -30,12 +32,5 @@ $mainColor: #2a5ea2;
         &:focus {
             outline: none;
         }
-    }
-}
-
-@media (max-width: 991px) {
-    .filter-wrapper {
-        width: 100%;
-        margin-bottom: 20px;
     }
 }
