--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,95 +1,73 @@
-$mainColor: #2a5ea2;
+// $mainColor: #333;
+$textColor: #fff;
+$mainColor: #2a5ea5;
 
 .products-wrapper {
-  width: 68%;
+  flex: 1;
   height: fit-content;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
+  margin-right: 30px;
+  @media (max-width: 767px) {
+    margin-right: 0;
+  }
 
   .product-item {
-    height: fit-content;
-    
+    text-align: center;
+    border: 2px solid $mainColor;
+
     img {
-      width: 100%;
-      height: 200px;
-      padding: 3px;
-      border: 1px solid #c0c0c0;
-      transition: all 0.3s;
+      max-width: 100%;
+      border-bottom: 1px solid $mainColor;
       cursor: pointer;
-      background: #c0c0c0;
-      border-radius: 6px;
-      &:hover {
-        transform: scale(1.03);
-      }
     }
 
     .product-desc {
       display: flex;
       justify-content: space-between;
-      padding: 5px;
+      align-items: center;
+      padding: 10px;
 
       p {
-        font-weight: bold;
+        text-transform: uppercase;
       }
-
-      span {
-        display: inline-block;
-        color: red;
-      }
-
     }
 
     button {
-      &:last-child {
-        border: none;
-        background: $mainColor;
-        color: white;
-        width: 100%;
-        padding: 7px;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: all 0.3s;
-        &:hover {
-          background: #03295a;
-        }
-        &:active {
-          transform: scale(0.9);
-        }
+      border: none;
+      font-size: 17px;
+      background: $mainColor;
+      color: $textColor;
+      width: 100%;
+      padding: 10px;
+      height: 40px;
+      text-align: left;
+      cursor: pointer;
+      &:active {
+        font-size: 16.7px;
       }
     }
-
   }
 }
 
-@media (max-width: 767px) {
-    .products-wrapper {
-      width: 100%;
-      grid-template-columns: 1fr;
-    }
-}
-@media (min-width: 768px ) and (max-width: 991px) {
-    .products-wrapper {
-      width: 100%;
-      grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-.product-info {
+.modal {
   position: relative;
-  text-align: center;
-  img {
-    width: 400px;
-    max-width: 100%;
-    margin: auto;
-    border: 1px solid #c0c0c0;
+  background-color: rgb(255, 255, 255);
+  width: 80%;
+  border: 2px solid $mainColor;
+  margin: 20px auto;
+  padding: 20px;
+  @media (max-width: 991px) {
+    width: 99%;
   }
+
   .close-icon {
     display: block;
     position: absolute;
     right: 10px;
     top: 10px;
-    transition: all 0.1s;  
+    transition: all 0.1s;
     cursor: pointer;
     font-size: 20px;
     &:hover {
@@ -97,9 +75,31 @@ $mainColor: #2a5ea2;
       color: red;
     }
   }
-  p {
-    color: $mainColor;
-    font-size: 20px;
-    margin: 10px 0;
+
+  .product-info {
+    position: relative;
+    display: flex;
+    align-items: center;
+    @media (max-width: 767px) {
+      flex-direction: column-reverse;
+    }
+
+    img {
+      margin-right: 30px;
+      width: 300px;
+      max-width: 100%;
+    }
+
+    > div div:first-child {
+      text-align: center;
+      margin-bottom: 50px;
+      color: $mainColor;
+      font-size: 30px;
+    }
+
+    p {
+      font-size: 20px;
+      margin: 10px 0;
+    }
   }
 }
