--- a/client/src/css/Filter/Filter.css
+++ b/client/src/css/Filter/Filter.css
@@ -1,12 +1,12 @@
 .filter-wrapper {
-  width: 30%;
+  margin-bottom: 30px;
   height: fit-content;
   border: 1px solid #c0c0c0;
   padding-bottom: 10px;
 }
 .filter-wrapper .filter-title {
-  background-color: #2a5ea2;
-  color: white;
+  background-color: #2a5ea5;
+  color: #fff;
   padding: 10px;
   font-weight: bold;
   text-transform: uppercase;
@@ -25,11 +25,4 @@
 }
 .filter-wrapper select:focus {
   outline: none;
-}
-
-@media (max-width: 991px) {
-  .filter-wrapper {
-    width: 100%;
-    margin-bottom: 20px;
-  }
 }
