--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -1,78 +1,63 @@
 .products-wrapper {
-  width: 68%;
+  flex: 1;
   height: fit-content;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
+  margin-right: 30px;
+}
+@media (max-width: 767px) {
+  .products-wrapper {
+    margin-right: 0;
+  }
 }
 .products-wrapper .product-item {
-  height: fit-content;
+  text-align: center;
+  border: 2px solid #2a5ea5;
 }
 .products-wrapper .product-item img {
-  width: 100%;
-  height: 200px;
-  padding: 3px;
-  border: 1px solid #c0c0c0;
-  transition: all 0.3s;
+  max-width: 100%;
+  border-bottom: 1px solid #2a5ea5;
   cursor: pointer;
-  background: #c0c0c0;
-  border-radius: 6px;
-}
-.products-wrapper .product-item img:hover {
-  transform: scale(1.03);
 }
 .products-wrapper .product-item .product-desc {
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  align-items: center;
+  padding: 10px;
 }
 .products-wrapper .product-item .product-desc p {
-  font-weight: bold;
+  text-transform: uppercase;
 }
-.products-wrapper .product-item .product-desc span {
-  display: inline-block;
-  color: red;
-}
-.products-wrapper .product-item button:last-child {
+.products-wrapper .product-item button {
   border: none;
-  background: #2a5ea2;
-  color: white;
+  font-size: 17px;
+  background: #2a5ea5;
+  color: #fff;
   width: 100%;
-  padding: 7px;
-  border-radius: 6px;
+  padding: 10px;
+  height: 40px;
+  text-align: left;
   cursor: pointer;
-  transition: all 0.3s;
 }
-.products-wrapper .product-item button:last-child:hover {
-  background: #03295a;
-}
-.products-wrapper .product-item button:last-child:active {
-  transform: scale(0.9);
+.products-wrapper .product-item button:active {
+  font-size: 16.7px;
 }
 
-@media (max-width: 767px) {
-  .products-wrapper {
-    width: 100%;
-    grid-template-columns: 1fr;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .products-wrapper {
-    width: 100%;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-.product-info {
+.modal {
   position: relative;
-  text-align: center;
+  background-color: white;
+  width: 80%;
+  border: 2px solid #2a5ea5;
+  margin: 20px auto;
+  padding: 20px;
 }
-.product-info img {
-  width: 400px;
-  max-width: 100%;
-  margin: auto;
-  border: 1px solid #c0c0c0;
+@media (max-width: 991px) {
+  .modal {
+    width: 99%;
+  }
 }
-.product-info .close-icon {
+.modal .close-icon {
   display: block;
   position: absolute;
   right: 10px;
@@ -81,12 +66,32 @@
   cursor: pointer;
   font-size: 20px;
 }
-.product-info .close-icon:hover {
+.modal .close-icon:hover {
   transform: scale(2);
   color: red;
 }
-.product-info p {
-  color: #2a5ea2;
+.modal .product-info {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .modal .product-info {
+    flex-direction: column-reverse;
+  }
+}
+.modal .product-info img {
+  margin-right: 30px;
+  width: 300px;
+  max-width: 100%;
+}
+.modal .product-info > div div:first-child {
+  text-align: center;
+  margin-bottom: 50px;
+  color: #2a5ea5;
+  font-size: 30px;
+}
+.modal .product-info p {
   font-size: 20px;
   margin: 10px 0;
 }
