--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -3,6 +3,7 @@ header {
   background-color: #2a5ea5;
   color: #fff;
   display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 20px;
   text-transform: uppercase;
