--- a/client/src/components/Filter/Filter.scss
+++ b/client/src/components/Filter/Filter.scss
@@ -3,34 +3,35 @@ $textColor: #fff;
 $mainColor: #2a5ea5;
 
 .filter-wrapper {
+  margin-bottom: 30px;
+  height: fit-content;
+  border: 1px solid #c0c0c0;
+  @media (max-width: 991px) {
+    width: 100%;
+  }
 
-    margin-bottom: 30px;
-    height: fit-content;
+  .filter-title {
+    background-color: $mainColor;
+    color: $textColor;
+    padding: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  > div {
+    margin-bottom: 10px;
+    padding: 5px 10px;
+  }
+
+  select {
+    width: 100%;
+    padding: 10px;
+    margin: 4px auto;
     border: 1px solid #c0c0c0;
-    padding-bottom: 10px;
-    
-    .filter-title {
-        background-color: $mainColor;
-        color: $textColor;
-        padding: 10px;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 20px;
-        margin-bottom: 20px
+    &:focus {
+      outline: none;
     }
-
-    > div {
-        margin-bottom: 10px;
-        padding: 5px 10px;
-    }
-
-    select {
-        width: 100%;
-        padding: 10px;
-        margin-top: 4px;
-        border: 1px solid #c0c0c0;
-        &:focus {
-            outline: none;
-        }
-    }
+  }
 }
