--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -3,19 +3,17 @@ $textColor: #fff;
 $mainColor: #2a5ea5;
 
 .products-wrapper {
-  flex: 1;
   height: fit-content;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
-  margin-right: 30px;
-  @media (max-width: 767px) {
-    margin-right: 0;
-  }
 
   .product-item {
     text-align: center;
     border: 2px solid $mainColor;
+    @media (max-width: 767px) {
+      width: 100%;
+    }
 
     img {
       max-width: 100%;
