--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -12,7 +12,6 @@ $mainColor: #2a5ea5;
     }
     .cart-items {
       margin-top: 10px;
-      // border: 1px solid #c0c0c0;
       .cart-item {
         box-shadow: 2px 2px 5px #c0c0c0;
         display: flex;
@@ -32,19 +31,27 @@ $mainColor: #2a5ea5;
           p {
             margin-bottom: 5px;
           }
-          button {
-            background-color: $mainColor;
-            border: none;
-            padding: 10px;
-            color: #fff;
-            font-size: 17px;
-            margin-right: 3px;
-            cursor: pointer;
-            &:active {
-              transform: scale(0.9);
-            }
-          }
         }
+      }
+    }
+    .cart-footer {
+      display: flex;
+      justify-content: space-between;
+      margin: 20px;
+      .total {
+        font-size: 25px;
+      }
+    }
+    button {
+      background-color: $mainColor;
+      border: none;
+      padding: 10px;
+      color: #fff;
+      font-size: 17px;
+      margin-right: 3px;
+      cursor: pointer;
+      &:active {
+        transform: scale(0.9);
       }
     }
   }
