--- a/client/src/css/Cart/Cart.css
+++ b/client/src/css/Cart/Cart.css
@@ -31,7 +31,15 @@
 .cart .container .cart-items .cart-item .cart-info p {
   margin-bottom: 5px;
 }
-.cart .container .cart-items .cart-item .cart-info button {
+.cart .container .cart-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.cart .container .cart-footer .total {
+  font-size: 25px;
+}
+.cart .container button {
   background-color: #2a5ea5;
   border: none;
   padding: 10px;
@@ -40,6 +48,6 @@
   margin-right: 3px;
   cursor: pointer;
 }
-.cart .container .cart-items .cart-item .cart-info button:active {
+.cart .container button:active {
   transform: scale(0.9);
 }
