--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -49,7 +49,7 @@ $mainColor: #2a5ea5;
   }
 }
 
-.modal {
+.products-modal {
   position: relative;
   background-color: rgb(255, 255, 255);
   width: 80%;
