--- a/client/src/components/CeckoutForm/Checkout.scss
+++ b/client/src/components/CeckoutForm/Checkout.scss
@@ -5,17 +5,29 @@ $mainColor: #2a5ea5;
   position: fixed;
   bottom: 0;
   left: 0;
+  padding: 20px;
   width: 100%;
   background-color: #c0c0c0;
   transition: all 0.3s;
+  
   .close-icon {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 25px;
+    display: block;
+    float: right;
+    border: 1px solid $mainColor;
+    padding: 7px 10px;
     cursor: pointer;
+    font-size: 20px;
+    &:hover {
+      span {
+        transition: all 0.3s;
+        display: block;
+        transform: scale(2);
+        color: $mainColor;
+      }
+    }
   }
   form {
+    margin-right: 50px;
     > div {
       display: flex;
       flex-direction: column;
