--- a/client/src/css/CeckoutForm/Checkout.css
+++ b/client/src/css/CeckoutForm/Checkout.css
@@ -2,16 +2,27 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  padding: 20px;
   width: 100%;
   background-color: #c0c0c0;
   transition: all 0.3s;
 }
 .checkout-form .close-icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 25px;
+  display: block;
+  float: right;
+  border: 1px solid #2a5ea5;
+  padding: 7px 10px;
   cursor: pointer;
+  font-size: 20px;
+}
+.checkout-form .close-icon:hover span {
+  transition: all 0.3s;
+  display: block;
+  transform: scale(2);
+  color: #2a5ea5;
+}
+.checkout-form form {
+  margin-right: 50px;
 }
 .checkout-form form > div {
   display: flex;
