--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,9 +6,43 @@ header {
   grid-area: header;
   background-color: $mainColor;
   color: $textColor;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  text-transform: uppercase;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    > p {
+      font-size: 20px;
+      text-transform: uppercase;
+    }
+    nav {
+      ul {
+        display: flex;
+        list-style: none;
+        a {
+          display: block;
+          text-decoration: none;
+          margin-left: 10px;
+          font-size: 18px;
+          color: #fff;
+          cursor: pointer;
+          padding: 10px;
+        }
+        .active {
+          position: relative;
+          color: #E2D784;
+          // font-weight: bold;
+          &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 3px;
+            background-color: #E2D784;
+            bottom: -9px;
+            left: 0;
+          }
+        }
+      }
+    }
+  }
 }
