--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -2,9 +2,40 @@ header {
   grid-area: header;
   background-color: #2a5ea5;
   color: #fff;
+}
+header .container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  height: 100%;
+}
+header .container > p {
   font-size: 20px;
   text-transform: uppercase;
+}
+header .container nav ul {
+  display: flex;
+  list-style: none;
+}
+header .container nav ul a {
+  display: block;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px;
+}
+header .container nav ul .active {
+  position: relative;
+  color: #E2D784;
+}
+header .container nav ul .active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #E2D784;
+  bottom: -9px;
+  left: 0;
 }
