--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -28,14 +28,14 @@ header .container nav ul a {
 }
 header .container nav ul .active {
   position: relative;
-  color: #E2D784;
+  color: #e2d784;
 }
 header .container nav ul .active::after {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 3px;
-  background-color: #E2D784;
   bottom: -9px;
-  left: 0;
+  border: 10px solid;
+  border-color: transparent transparent white transparent;
+  left: 50%;
+  transform: translateX(-50%);
 }
