--- a/client/src/css/Filter/Filter.css
+++ b/client/src/css/Filter/Filter.css
@@ -2,14 +2,15 @@
   margin-bottom: 30px;
   height: fit-content;
   border: 1px solid #c0c0c0;
+  box-shadow: 2px 2px 5px #c0c0c0;
 }
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .filter-wrapper {
     width: 100%;
   }
 }
 .filter-wrapper .filter-title {
-  background-color: #2a5ea5;
+  background-color: #333;
   color: #fff;
   padding: 10px;
   font-weight: bold;
