--- a/client/src/css/Footer/Footer.css
+++ b/client/src/css/Footer/Footer.css
@@ -1,7 +1,8 @@
 footer {
+  box-shadow: 5px -5px 5px #c0c0c0;
+  padding: 20px;
   grid-area: footer;
-  background-color: #2a5ea5;
-  color: #fff;
+  color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
