--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -1,12 +1,17 @@
 .products-wrapper {
-  height: fit-content;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
+  gap: 20px;
 }
 .products-wrapper .product-item {
+  box-shadow: 2px 5px 5px #c0c0c0;
+  border-radius: 5px;
   text-align: center;
-  border: 2px solid #2a5ea5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 @media (max-width: 767px) {
   .products-wrapper .product-item {
@@ -15,7 +20,6 @@
 }
 .products-wrapper .product-item img {
   max-width: 100%;
-  border-bottom: 1px solid #2a5ea5;
   cursor: pointer;
 }
 .products-wrapper .product-item .product-desc {
@@ -23,6 +27,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  border-top: 1px solid #333;
 }
 .products-wrapper .product-item .product-desc p {
   text-transform: uppercase;
@@ -30,12 +35,15 @@
 .products-wrapper .product-item button {
   border: none;
   font-size: 17px;
-  background: #2a5ea5;
+  background: #333;
   color: #fff;
   width: 100%;
   padding: 10px;
   height: 40px;
   text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   cursor: pointer;
 }
 .products-wrapper .product-item button:active {
@@ -46,7 +54,7 @@
   position: relative;
   background-color: white;
   width: 80%;
-  border: 2px solid #2a5ea5;
+  border: 2px solid #333;
   margin: 20px auto;
   padding: 20px;
 }
@@ -86,7 +94,7 @@
 .products-modal .product-info > div div:first-child {
   text-align: center;
   margin-bottom: 50px;
-  color: #2a5ea5;
+  color: #333;
   font-size: 30px;
 }
 .products-modal .product-info p {
