--- a/client/src/components/Filter/Filter.scss
+++ b/client/src/components/Filter/Filter.scss
@@ -1,12 +1,13 @@
-// $mainColor: #333;
+$mainColor: #333;
 $textColor: #fff;
-$mainColor: #2a5ea5;
+// $mainColor: #2a5ea5;
 
 .filter-wrapper {
   margin-bottom: 30px;
   height: fit-content;
   border: 1px solid #c0c0c0;
-  @media (max-width: 991px) {
+  box-shadow: 2px 2px 5px #c0c0c0;
+  @media (max-width: 767px) {
     width: 100%;
   }
 
