--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,11 +1,15 @@
-$mainColor: #2a5ea5;
-// $mainColor: #333;
+// $mainColor: #3a6b34;
+$mainColor: #333;
+
 $textColor: #fff;
+// $mainColor: #2a5ea5;
 
 footer {
+  box-shadow: 5px -5px 5px #c0c0c0;
+  padding: 20px;
   grid-area: footer;
-  background-color: $mainColor;
-  color: $textColor;
+  // background-color: $mainColor;
+  color: $mainColor;
   display: flex;
   justify-content: center;
   align-items: center;
