--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,23 +1,30 @@
-// $mainColor: #333;
+// $mainColor: #3a6b34;
+$mainColor: #333;
+
 $textColor: #fff;
-$mainColor: #2a5ea5;
+// $mainColor: #2a5ea5;
 
 .products-wrapper {
-  height: fit-content;
+  // height: fit-content;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
+  gap: 20px;
 
   .product-item {
+    box-shadow: 2px 5px 5px #c0c0c0;
+    border-radius: 5px;
     text-align: center;
-    border: 2px solid $mainColor;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
     @media (max-width: 767px) {
       width: 100%;
     }
 
     img {
       max-width: 100%;
-      border-bottom: 1px solid $mainColor;
       cursor: pointer;
     }
 
@@ -26,6 +33,7 @@ $mainColor: #2a5ea5;
       justify-content: space-between;
       align-items: center;
       padding: 10px;
+      border-top: 1px solid $mainColor;
 
       p {
         text-transform: uppercase;
@@ -41,6 +49,9 @@ $mainColor: #2a5ea5;
       padding: 10px;
       height: 40px;
       text-align: left;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       cursor: pointer;
       &:active {
         font-size: 16.7px;
@@ -59,7 +70,7 @@ $mainColor: #2a5ea5;
   @media (max-width: 991px) {
     width: 99%;
   }
-  
+
   .close-icon {
     display: block;
     position: absolute;
