--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -1,7 +1,7 @@
 header {
   grid-area: header;
-  background-color: #2a5ea5;
-  color: #fff;
+  color: #333;
+  box-shadow: 5px 5px 5px #c0c0c0;
 }
 header .container {
   display: flex;
@@ -9,33 +9,78 @@ header .container {
   align-items: center;
   height: 100%;
 }
-header .container > p {
-  font-size: 20px;
+header .container > a {
   text-transform: uppercase;
+  color: #333;
+  text-decoration: none;
 }
-header .container nav ul {
+header .container > a h1 {
+  font-family: "operator mono";
   display: flex;
+  align-items: center;
+  gap: 10px;
+}
+header .container > a h1 svg {
+  color: orangered;
+}
+header .container nav ul.main-list {
+  display: flex;
+  position: relative;
   list-style: none;
 }
-header .container nav ul a {
+header .container nav ul.main-list li {
+  margin-left: 10px;
+}
+header .container nav ul.main-list li a {
+  font-weight: bold;
   display: block;
   text-decoration: none;
-  margin-left: 10px;
   font-size: 18px;
-  color: #fff;
+  color: #333;
   cursor: pointer;
   padding: 10px;
 }
-header .container nav ul .active {
+header .container nav ul.main-list .active {
   position: relative;
-  color: #e2d784;
+  color: #333;
+  border: 1px solid orangered;
 }
-header .container nav ul .active::after {
-  content: "";
+header .container nav ul.main-list li.login-drop {
+  background-color: orangered;
+}
+header .container nav ul.main-list li.login-drop button {
+  padding: 10px;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  height: 100%;
+  font-size: 18px;
+  cursor: pointer;
+}
+header .container nav ul.main-list li.login-drop ul.drop-content {
+  list-style: none;
   position: absolute;
-  bottom: -9px;
-  border: 10px solid;
-  border-color: transparent transparent white transparent;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 51px;
+  right: 0;
+  z-index: 1;
+  width: 300px;
+}
+header .container nav ul.main-list li.login-drop ul.drop-content li {
+  border-top: 1px solid #c0c0c0;
+  transition: 0.3s;
+  background-color: #333;
+  opacity: 0.9;
+  display: flex;
+  align-items: center;
+}
+header .container nav ul.main-list li.login-drop ul.drop-content li svg {
+  color: #fff;
+}
+header .container nav ul.main-list li.login-drop ul.drop-content li:hover a {
+  margin-left: 10px;
+}
+header .container nav ul.main-list li.login-drop ul.drop-content li a {
+  color: #fff;
+  transition: 0.3s;
+  flex: 1;
 }
