--- a/client/src/pages/Orders.scss
+++ b/client/src/pages/Orders.scss
@@ -1,4 +1,8 @@
-$mainColor: #2a5ea5;
+// $mainColor: #3a6b34;
+$mainColor: #333;
+
+
+// $mainColor: #2a5ea5;
 
 .orders {
   margin: 20px auto;
@@ -11,7 +15,11 @@ $mainColor: #2a5ea5;
   table {
     width: 100%;
     border-collapse: collapse;
-    // border: 1px solid #c0c0c0;
+    box-shadow: 2px 2px 5px #333;
+    td,
+    th {
+      width: fit-content;
+    }
     thead {
       background-color: $mainColor;
       color: #fff;
@@ -24,8 +32,9 @@ $mainColor: #2a5ea5;
     }
     tbody {
       tr {
+        padding: 10px;
         &:nth-child(odd) {
-          background-color: #c0c0c06c;
+          background-color: #dbdbdb6c;
         }
         td {
           padding: 5px;
@@ -34,33 +43,40 @@ $mainColor: #2a5ea5;
             text-align: center;
           }
           &.details {
-            display: flex;
-            flex-wrap: wrap;
+            width: 500px;
             span {
-              display: inline-block;
-              background-color: #008E89;
-              color: white;
-              margin: 2px;
-              padding: 4px;
-              border-radius: 6px;
-              text-align: center;
+              display: flex;
+              flex-wrap: wrap;
+              div {
+                width: fit-content;
+                display: inline-flex;
+                // background-color: green;
+                border: 1px solid #c0c0c0;
+                color: #333;
+                box-shadow: 2px 2px 5px #c0c0c0;
+                margin: 2px;
+                padding: 10px;
+                text-align: center;
+              }
             }
           }
           &:last-child {
             width: 100px;
             button {
-              text-align: center;
+              display: flex;
+              justify-content: center;
+              align-items: center;
               width: 100%;
               background-color: transparent;
               border: none;
-              color: red;
-              padding: 10px;
-              font-size: 50px;
+              color: $mainColor;
+              font-size: 30px;
               font-weight: bold;
               cursor: pointer;
-              transition: .3s;
-              &:hover{
-                transform: scale(1.1);
+              transition: 0.3s;
+              &:hover {
+                transform: scale(1.05);
+                color: red;
               }
             }
           }
