--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,30 +1,23 @@
-// $mainColor: #3a6b34;
-$mainColor: #333;
-
+// $mainColor: #333;
 $textColor: #fff;
-// $mainColor: #2a5ea5;
+$mainColor: #2a5ea5;
 
 .products-wrapper {
-  // height: fit-content;
-  height: 100%;
+  height: fit-content;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
+  gap: 10px;
 
   .product-item {
-    box-shadow: 2px 5px 5px #c0c0c0;
-    border-radius: 5px;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
+    border: 2px solid $mainColor;
     @media (max-width: 767px) {
       width: 100%;
     }
 
     img {
       max-width: 100%;
+      border-bottom: 1px solid $mainColor;
       cursor: pointer;
     }
 
@@ -33,7 +26,6 @@ $textColor: #fff;
       justify-content: space-between;
       align-items: center;
       padding: 10px;
-      border-top: 1px solid $mainColor;
 
       p {
         text-transform: uppercase;
@@ -49,9 +41,6 @@ $textColor: #fff;
       padding: 10px;
       height: 40px;
       text-align: left;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       cursor: pointer;
       &:active {
         font-size: 16.7px;
@@ -70,7 +59,7 @@ $textColor: #fff;
   @media (max-width: 991px) {
     width: 99%;
   }
-
+  
   .close-icon {
     display: block;
     position: absolute;
