--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -1,7 +1,7 @@
 header {
   grid-area: header;
-  color: #333;
-  box-shadow: 5px 5px 5px #c0c0c0;
+  background-color: #2a5ea5;
+  color: #fff;
 }
 header .container {
   display: flex;
@@ -9,78 +9,33 @@ header .container {
   align-items: center;
   height: 100%;
 }
-header .container > a {
+header .container > p {
+  font-size: 20px;
   text-transform: uppercase;
-  color: #333;
-  text-decoration: none;
 }
-header .container > a h1 {
-  font-family: "operator mono";
+header .container nav ul {
   display: flex;
-  align-items: center;
-  gap: 10px;
-}
-header .container > a h1 svg {
-  color: orangered;
-}
-header .container nav ul.main-list {
-  display: flex;
-  position: relative;
   list-style: none;
 }
-header .container nav ul.main-list li {
-  margin-left: 10px;
-}
-header .container nav ul.main-list li a {
-  font-weight: bold;
+header .container nav ul a {
   display: block;
   text-decoration: none;
-  font-size: 18px;
-  color: #333;
-  cursor: pointer;
-  padding: 10px;
-}
-header .container nav ul.main-list .active {
-  position: relative;
-  color: #333;
-  border: 1px solid orangered;
-}
-header .container nav ul.main-list li.login-drop {
-  background-color: orangered;
-}
-header .container nav ul.main-list li.login-drop button {
-  padding: 10px;
-  border: none;
-  background-color: transparent;
-  color: #fff;
-  height: 100%;
-  font-size: 18px;
-  cursor: pointer;
-}
-header .container nav ul.main-list li.login-drop ul.drop-content {
-  list-style: none;
-  position: absolute;
-  top: 51px;
-  right: 0;
-  z-index: 1;
-  width: 300px;
-}
-header .container nav ul.main-list li.login-drop ul.drop-content li {
-  border-top: 1px solid #c0c0c0;
-  transition: 0.3s;
-  background-color: #333;
-  opacity: 0.9;
-  display: flex;
-  align-items: center;
-}
-header .container nav ul.main-list li.login-drop ul.drop-content li svg {
-  color: #fff;
-}
-header .container nav ul.main-list li.login-drop ul.drop-content li:hover a {
   margin-left: 10px;
-}
-header .container nav ul.main-list li.login-drop ul.drop-content li a {
+  font-size: 18px;
   color: #fff;
-  transition: 0.3s;
-  flex: 1;
+  cursor: pointer;
+  padding: 10px;
+}
+header .container nav ul .active {
+  position: relative;
+  color: #e2d784;
+}
+header .container nav ul .active::after {
+  content: "";
+  position: absolute;
+  bottom: -9px;
+  border: 10px solid;
+  border-color: transparent transparent white transparent;
+  left: 50%;
+  transform: translateX(-50%);
 }
