--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'operator mono lig';
+    font-family: 'Quicksand', sans-serif;
 }
 
 /* Container Style */
